--- a/public/views/main.html
+++ b/public/views/main.html
@@ -7,8 +7,22 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col l3">
-			
+		<div class="col">
+			<div class="card">
+				<div class="card-image waves-effect waves-block waves-light">
+					<a ng-href="">
+						<img class="activator" src="/images/1.jpg">
+					</a>
+				</div>
+				<div class="card-content song-content">
+					<p class="song-title"><a ng-href="#" >Na Na Na Na | J Star | Full Official Video | Latest Punjabi Song 2015</a></p>
+					<p class="production-name"><a href="#">J STAR Productions</a></p>
+					<ul class="card-bottom">
+						<li>19000 views</li>
+						<li>1 month ago</li>
+					</ul>
+				</div>
+			</div>
 		</div>
 	</div>
 
