--- a/public/views/main.html
+++ b/public/views/main.html
@@ -10,7 +10,7 @@
 		<div class="col">
 			<div class="card">
 				<div class="card-image waves-effect waves-block waves-light">
-					<a ng-href="">
+					<a ng-href="/#/video">
 						<img class="activator" src="/images/1.jpg">
 					</a>
 				</div>
@@ -25,7 +25,7 @@
 			</div>
 		</div>
 	</div>
-
+	
 
 </div>			
 
