--- a/public/views/elements/nav-bar.html
+++ b/public/views/elements/nav-bar.html
@@ -1,9 +1,9 @@
  <div class="navbar-fixed topbar">
         <nav>
           <div class="nav-wrapper black">
-             <a href="#" class="brand-logo">Logo</a>
-              
-              <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <!-- <div class="row"> -->
+             <a ui-sref="main" class="brand-logo">Logo</a>
+              <ul id="nav-mobile" class="search-nav hide-on-med-and-down">
                 <li>
                   <form>
                     <div class="input-field">
@@ -13,8 +13,16 @@
                     </div>
                   </form>
                 </li>
-                <li><a ng-href="">Signup</a></li>
+                <li>
+                  <a class="waves-effect waves-light btn upload">Upload</a>
+                </li>
+                <li>
+                  <i class="material-icons notify">notifications_none</i>
+                </li>
+                <li><a ng-href="" >Signup</a></li>
               </ul>
+            
+          <!-- </div> -->
           </div>
         </nav>
   </div>
